--- a/hero-section/index.html
+++ b/hero-section/index.html
@@ -3,76 +3,130 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Resume Timeline</title>
+  <title>Full Width Header Video</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-  <section class="timeline-resume">
-    <div class="job-row">
-      <div class="job-date">Current</div>
-      <div class="job-company">Synthesia</div>
-      <div class="job-title">Senior Product Designer</div>
-      <div class="job-location">Remote</div>
-      <button class="job-toggle">+</button>
+  <!-- Header: Logo and Navigation -->
+  <header>
+    <nav class="top-navbar">
+      <div class="nav-container">
+        <div class="logo">
+          <a href="#">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Logo">
+          </a>
+        </div>
+        <ul class="nav-links">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Resume</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <!-- Hero Section with Video -->
+  <section class="hero-section">
+    <div class="video-wrapper">
+      <video autoplay muted loop playsinline class="hero-video" aria-label="Background video">
+        <source src="images/video02.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
     </div>
 
-    <div class="job-row">
-      <div class="job-date">2022–2023</div>
-      <div class="job-company">Metafy</div>
-      <div class="job-title">Design Lead</div>
-      <div class="job-location">Remote</div>
-      <button class="job-toggle">+</button>
-    </div>
-
-    <div class="job-row">
-      <div class="job-date">2020–2022</div>
-      <div class="job-company">MetaLab</div>
-      <div class="job-title">Design Lead</div>
-      <div class="job-location">Remote</div>
-      <button class="job-toggle">+</button>
-    </div>
-
-    <div class="job-row">
-      <div class="job-date">2018–2020</div>
-      <div class="job-company">Huawei</div>
-      <div class="job-title">UX Design Manager</div>
-      <div class="job-location">Milan, Italy</div>
-      <button class="job-toggle">+</button>
-    </div>
-
-    <div class="job-row">
-      <div class="job-date">2018</div>
-      <div class="job-company">Alkemy</div>
-      <div class="job-title">Senior Product Designer</div>
-      <div class="job-location">Milan, Italy</div>
-      <button class="job-toggle">+</button>
-    </div>
-
-    <div class="job-row">
-      <div class="job-date">2015–2018</div>
-      <div class="job-company">JibJab</div>
-      <div class="job-title">Senior Product Designer</div>
-      <div class="job-location">Los Angeles, California</div>
-      <button class="job-toggle">+</button>
-    </div>
-
-    <div class="job-row">
-      <div class="job-date">2013–2015</div>
-      <div class="job-company">Mutado</div>
-      <div class="job-title">Senior Digital Art Director</div>
-      <div class="job-location">Milan, Italy</div>
-      <button class="job-toggle">+</button>
-    </div>
-
-    <div class="job-row">
-      <div class="job-date">2007–2013</div>
-      <div class="job-company">Pbcom</div>
-      <div class="job-title">Digital Art Director</div>
-      <div class="job-location">Genoa, Italy</div>
-      <button class="job-toggle">+</button>
+    <div class="hero-text">
+      <h1>Welcome to My Website</h1>
+      <p>Crafting Clouds and Code</p>
     </div>
   </section>
+
+  <!-- Main Content -->
+  <main class="main-content">
+
+    <!-- About Section -->
+    <section class="about-section">
+      <div class="about-container">
+        <div class="about-content">
+          <div class="about-image">
+            <img src="https://via.placeholder.com/400x400" alt="Your Photo">
+          </div>
+          <div class="about-text">
+            <h2>About Me</h2>
+            <p>
+              I'm a passionate Cloud Developer focused on building secure, scalable, and user-friendly applications.
+              With a background in full-stack web development and cloud infrastructure, I love turning complex
+              ideas into elegant digital solutions.
+            </p>
+            <ul class="about-features">
+              <li>🚀 AWS Certified Cloud Practitioner</li>
+              <li>💡 Strong focus on security and scalability</li>
+              <li>🛠️ Experienced in Python, JavaScript, HTML/CSS</li>
+              <li>🌐 Portfolio includes web apps, APIs, and infrastructure as code</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Resume Section -->
+    <section class="timeline-resume">
+  <div class="job-row">
+    <div class="job-date">Current</div>
+    <div class="job-company">Synthesia</div>
+    <div class="job-title">Senior Product Designer</div>
+    <div class="job-location">Remote</div>
+    <button class="job-toggle">+</button>
+  </div>
+
+  <div class="job-row">
+    <div class="job-date">2022–2023</div>
+    <div class="job-company">Metafy</div>
+    <div class="job-title">Design Lead</div>
+    <div class="job-location">Remote</div>
+    <button class="job-toggle">+</button>
+  </div>
+
+  <div class="job-row">
+    <div class="job-date">2020–2022</div>
+    <div class="job-company">MetaLab</div>
+    <div class="job-title">Design Lead</div>
+    <div class="job-location">Remote</div>
+    <button class="job-toggle">+</button>
+  </div>
+
+  <div class="job-row">
+    <div class="job-date">2018–2020</div>
+    <div class="job-company">Huawei</div>
+    <div class="job-title">UX Design Manager</div>
+    <div class="job-location">Milan, Italy</div>
+    <button class="job-toggle">+</button>
+  </div>
+
+  <!-- Add more rows as needed -->
+</section>
+
+  </main>
+
+  <!-- JavaScript for collapsible resume items -->
+  <script>
+    const collapsibles = document.querySelectorAll(".collapsible");
+    collapsibles.forEach(button => {
+      button.addEventListener("click", function () {
+        this.classList.toggle("active");
+        const content = this.nextElementSibling;
+        const isOpen = this.classList.contains("active");
+        this.setAttribute("aria-expanded", isOpen);
+        if (isOpen) {
+          content.style.maxHeight = content.scrollHeight + "px";
+        } else {
+          content.style.maxHeight = null;
+        }
+      });
+    });
+  </script>
 
 </body>
 </html>
