--- a/hero-section/index.html
+++ b/hero-section/index.html
@@ -74,15 +74,16 @@
     <!-- Resume Section -->
 <section class="timeline-resume">
 
-  <div class="job-item">
-    <div class="job-row">
-      <div class="job-date">Current</div>
-      <div class="job-company">Synthesia</div>
-      <div class="job-title">Senior Product Designer</div>
-      <div class="job-location">Remote</div>
-      <button class="job-toggle">+</button>
+  <div class="accordion-container">
+  <div class="accordion-item">
+    <div class="accordion-header">
+      <div class="accordion-date">Current</div>
+      <div class="accordion-company">Synthesia</div>
+      <div class="accordion-role">Senior Product Designer</div>
+      <div class="accordion-location">Remote</div>
+      <img src="plus.svg" alt="Toggle details" class="accordion-toggle" />
     </div>
-    <div class="job-details">
+    <div class="accordion-content">
       <p>
         Leading design efforts on AI video creation tools. Collaborating cross-functionally with product managers, engineers, and researchers.
       </p>
@@ -91,6 +92,7 @@
       </p>
     </div>
   </div>
+</div>
 
   <div class="job-item">
     <div class="job-row">
