--- a/hero-section/index.html
+++ b/hero-section/index.html
@@ -75,66 +75,66 @@
 <section class="timeline-resume">
 
   <div class="accordion-container">
-  <div class="accordion-item">
-    <div class="accordion-header">
-      <div class="accordion-date">Current</div>
-      <div class="accordion-company">Synthesia</div>
-      <div class="accordion-role">Senior Product Designer</div>
-      <div class="accordion-location">Remote</div>
-      <img src="plus.svg" alt="Toggle details" class="accordion-toggle" />
+    <div class="accordion-item">
+      <div class="accordion-header">
+        <div class="accordion-date">Current</div>
+        <div class="accordion-company">Synthesia</div>
+        <div class="accordion-role">Senior Product Designer</div>
+        <div class="accordion-location">Remote</div>
+        <button class="job-toggle">+</button>
+      </div>
+      <div class="accordion-content">
+        <p>
+          Leading design efforts on AI video creation tools. Collaborating cross-functionally with product managers, engineers, and researchers.
+        </p>
+        <p>
+          Spearheaded a major redesign that improved user onboarding by 30%.
+        </p>
+      </div>
     </div>
-    <div class="accordion-content">
-      <p>
-        Leading design efforts on AI video creation tools. Collaborating cross-functionally with product managers, engineers, and researchers.
-      </p>
-      <p>
-        Spearheaded a major redesign that improved user onboarding by 30%.
-      </p>
+
+    <div class="accordion-item">
+      <div class="accordion-header">
+        <div class="accordion-date">2022–2023</div>
+        <div class="accordion-company">Metafy</div>
+        <div class="accordion-role">Design Lead</div>
+        <div class="accordion-location">Remote</div>
+        <button class="job-toggle">+</button>
+      </div>
+      <div class="accordion-content">
+        <p>Led a team of designers creating tools for streamers and creators. Defined design systems and user experience flows.</p>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <div class="accordion-header">
+        <div class="accordion-date">2020–2022</div>
+        <div class="accordion-company">MetaLab</div>
+        <div class="accordion-role">Design Lead</div>
+        <div class="accordion-location">Remote</div>
+        <button class="job-toggle">+</button>
+      </div>
+      <div class="accordion-content">
+        <p>Managed product design for SaaS clients. Delivered high-fidelity prototypes and collaborated with dev teams for implementation.</p>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <div class="accordion-header">
+        <div class="accordion-date">2018–2020</div>
+        <div class="accordion-company">Huawei</div>
+        <div class="accordion-role">UX Design Manager</div>
+        <div class="accordion-location">Milan, Italy</div>
+        <button class="job-toggle">+</button>
+      </div>
+      <div class="accordion-content">
+        <p>Directed mobile UX efforts for EMUI. Worked with engineering to localize and adapt UX patterns for European markets.</p>
+      </div>
     </div>
   </div>
-</div>
 
-  <div class="job-item">
-    <div class="job-row">
-      <div class="job-date">2022–2023</div>
-      <div class="job-company">Metafy</div>
-      <div class="job-title">Design Lead</div>
-      <div class="job-location">Remote</div>
-      <button class="job-toggle">+</button>
-    </div>
-    <div class="job-details">
-      <p>Led a team of designers creating tools for streamers and creators. Defined design systems and user experience flows.</p>
-    </div>
-  </div>
-
-  <div class="job-item">
-    <div class="job-row">
-      <div class="job-date">2020–2022</div>
-      <div class="job-company">MetaLab</div>
-      <div class="job-title">Design Lead</div>
-      <div class="job-location">Remote</div>
-      <button class="job-toggle">+</button>
-    </div>
-    <div class="job-details">
-      <p>Managed product design for SaaS clients. Delivered high-fidelity prototypes and collaborated with dev teams for implementation.</p>
-    </div>
-  </div>
-
-  <div class="job-item">
-    <div class="job-row">
-      <div class="job-date">2018–2020</div>
-      <div class="job-company">Huawei</div>
-      <div class="job-title">UX Design Manager</div>
-      <div class="job-location">Milan, Italy</div>
-      <button class="job-toggle">+</button>
-    </div>
-    <div class="job-details">
-      <p>Directed mobile UX efforts for EMUI. Worked with engineering to localize and adapt UX patterns for European markets.</p>
-    </div>
-  </div>
-
-  <!-- Add more rows as needed -->
 </section>
+
 
   </main>
 
