--- a/hero-section/index.html
+++ b/hero-section/index.html
@@ -72,8 +72,6 @@
     </section>
 
     <!-- Resume Section -->
-<section class="timeline-resume">
-
   <div class="accordion-container">
     <div class="accordion-item">
       <div class="accordion-header">
@@ -85,10 +83,10 @@
       </div>
       <div class="accordion-content">
         <p>
-          Leading design efforts on AI video creation tools. Collaborating cross-functionally with product managers, engineers, and researchers.
+          - Leading design efforts on AI video creation tools. Collaborating cross-functionally with product managers, engineers, and researchers.
         </p>
         <p>
-          Spearheaded a major redesign that improved user onboarding by 30%.
+          - Spearheaded a major redesign that improved user onboarding by 30%.
         </p>
       </div>
     </div>
@@ -132,9 +130,7 @@
       </div>
     </div>
   </div>
-
 </section>
-
 
   </main>
 
