--- a/hero-section/index.html
+++ b/hero-section/index.html
@@ -72,6 +72,7 @@
     </section>
 
     <!-- Resume Section -->
+<section class="timeline-resume">
   <div class="accordion-container">
     <div class="accordion-item">
       <div class="accordion-header">
