--- a/hero-section/index.html
+++ b/hero-section/index.html
@@ -73,6 +73,24 @@
 
     <!-- Resume Section -->
 <section class="timeline-resume">
+
+  <h2 class="resume-category">Education</h2>
+  <div class="accordion-container">
+    <div class="accordion-item">
+      <div class="accordion-header">
+        <div class="accordion-date">2010–2014</div>
+        <div class="accordion-company">University of Example</div>
+        <div class="accordion-role">B.S. in Computer Science</div>
+        <div class="accordion-location">San Francisco, CA</div>
+        <button class="job-toggle">+</button>
+      </div>
+      <div class="accordion-content">
+        <p>Completed a comprehensive 4-year degree in computer science with a focus on software engineering and web development.</p>
+      </div>
+    </div>
+  </div>
+
+  <h2 class="resume-category">Work Experience</h2>
   <div class="accordion-container">
     <div class="accordion-item">
       <div class="accordion-header">
@@ -131,7 +149,9 @@
       </div>
     </div>
   </div>
+
 </section>
+
 
   </main>
 
