--- a/hero-section/index.html
+++ b/hero-section/index.html
@@ -151,6 +151,27 @@
   </div>
 
 </section>
+    
+<!-- Project Portfolio --> 
+    <section class="service-collection">
+  <div class="service-wrapper">
+    <div class="service-card">
+      <img src="your-image-1.jpg" alt="Service 1">
+      <h3>AI Personalization</h3>
+      <p>Leverage AI for tailored user experiences.</p>
+    </div>
+    <div class="service-card">
+      <img src="your-image-2.jpg" alt="Service 2">
+      <h3>Automation Tools</h3>
+      <p>Automate business workflows with precision.</p>
+    </div>
+    <div class="service-card">
+      <img src="your-image-3.jpg" alt="Service 3">
+      <h3>AI Insights</h3>
+      <p>Get deep insights from complex data.</p>
+    </div>
+  </div>
+</section>
 
 
   </main>
