--- a/hero-section/index.html
+++ b/hero-section/index.html
@@ -201,9 +201,18 @@
       }
     });
   });
+  const cards = document.querySelectorAll(".service-card");
+
+  const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add("active");
+      }
+    });
+  }, { threshold: 0.3 });
+
+  cards.forEach(card => observer.observe(card));
 </script>
-
-
 
 </body>
 </html>
