--- a/hero-section/index.html
+++ b/hero-section/index.html
@@ -153,22 +153,26 @@
 </section>
     
 <!-- Project Portfolio --> 
-    <section class="service-collection">
+   <section class="service-collection">
+  <div class="section-header">
+    <h2>Create Your Own AI Business Easily</h2>
+    <p>Build scalable solutions with the power of AI-driven tools and services.</p>
+  </div>
   <div class="service-wrapper">
     <div class="service-card">
-      <img src="images/04.jpg" alt="Service 1">
+      <img src="images/01.jpg" alt="AI Personalization">
       <h3>AI Personalization</h3>
-      <p>Leverage AI for tailored user experiences.</p>
+      <p>Tailor user experiences with intelligent behavior tracking and recommendations.</p>
     </div>
     <div class="service-card">
-      <img src="images/02.jpg" alt="Service 2">
+      <img src="images/02.jpg" alt="Automation Tools">
       <h3>Automation Tools</h3>
-      <p>Automate business workflows with precision.</p>
+      <p>Streamline operations and reduce costs using advanced automation scripts.</p>
     </div>
     <div class="service-card">
-      <img src="images/03.jpg" alt="Service 3">
+      <img src="images/03.jpg" alt="AI Insights">
       <h3>AI Insights</h3>
-      <p>Get deep insights from complex data.</p>
+      <p>Analyze complex data to uncover meaningful insights that drive growth.</p>
     </div>
   </div>
 </section>
@@ -201,18 +205,23 @@
       }
     });
   });
+</script>
+  <script>
   const cards = document.querySelectorAll(".service-card");
 
   const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
+    entries.forEach((entry, index) => {
       if (entry.isIntersecting) {
         entry.target.classList.add("active");
+        // Optional: stagger animation
+        entry.target.style.transitionDelay = `${index * 0.2}s`;
       }
     });
   }, { threshold: 0.3 });
 
   cards.forEach(card => observer.observe(card));
 </script>
+
 
 </body>
 </html>
