--- a/hero-section/index.html
+++ b/hero-section/index.html
@@ -159,7 +159,7 @@
       <img src="images/001.png" alt="Icon 1" class="process-icon" />
       <h4 class="process-title">Data Collection & Preparation</h4>
       <p class="process-desc">Gather relevant data, clean, and preprocess it for analysis.</p>
-      <a href="#pricing" class="process-link">
+      <a href="#pricing" class="process-link" aria-label="Learn more">
         <span class="arrow-icon">↗</span>
       </a>
       <div class="process-number">1</div>
