--- a/hero-section/index.html
+++ b/hero-section/index.html
@@ -156,7 +156,7 @@
  <section class="process-section">
   <div class="process-grid">
     <div class="process-card border-gradient">
-      <img src="images/icon1.png" alt="Icon 1" class="process-icon" />
+      <img src="images/001.png" alt="Icon 1" class="process-icon" />
       <h4 class="process-title">Data Collection & Preparation</h4>
       <p class="process-desc">Gather relevant data, clean, and preprocess it for analysis.</p>
       <a href="#pricing" class="process-link" aria-label="Learn more">
@@ -166,7 +166,7 @@
     </div>
 
     <div class="process-card border-gradient">
-      <img src="images/icon2.png" alt="Icon 2" class="process-icon" />
+      <img src="images/002.png" alt="Icon 2" class="process-icon" />
       <h4 class="process-title">Model Development & Training</h4>
       <p class="process-desc">Build and train AI models to recognize patterns.</p>
       <a href="#pricing" class="process-link" aria-label="Learn more">
@@ -176,7 +176,7 @@
     </div>
 
     <div class="process-card border-gradient">
-      <img src="images/icon3.png" alt="Icon 3" class="process-icon" />
+      <img src="images/003.png" alt="Icon 3" class="process-icon" />
       <h4 class="process-title">Evaluation & Deployment</h4>
       <p class="process-desc">Test model accuracy, refine as needed, and deploy.</p>
       <a href="#pricing" class="process-link" aria-label="Learn more">
