--- a/hero-section/index.html
+++ b/hero-section/index.html
@@ -190,18 +190,29 @@
   </main>
 
   <!-- JavaScript for collapsible resume items -->
-  <script>
+ <script>
   document.addEventListener("DOMContentLoaded", () => {
     const cards = document.querySelectorAll(".border-gradient");
-    let angle = 0;
-    const rotateGradient = () => {
-      angle = (angle + 1) % 360;
-      cards.forEach(el => el.style.setProperty("--gradient-angle", `${angle}deg`));
-      requestAnimationFrame(rotateGradient);
+
+    let angle1 = 0;
+    let angle2 = 180; // start from opposite side
+
+    const rotateGradients = () => {
+      angle1 = (angle1 + 1) % 360;
+      angle2 = (angle2 + 1) % 360;
+
+      cards.forEach(el => {
+        el.style.setProperty("--angle1", `${angle1}deg`);
+        el.style.setProperty("--angle2", `${angle2}deg`);
+      });
+
+      requestAnimationFrame(rotateGradients);
     };
-    rotateGradient();
+
+    rotateGradients();
   });
 </script>
+
 
 <script>
   document.querySelectorAll(".job-toggle").forEach(button => {
