--- a/template2/index.html
+++ b/template2/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Background Animation Section -->
     <section id="background-section">
-        <canvas id="network-canvas"></canvas>
+        <canvas id="network-canvas" style="position: fixed; top: 0; left: 0; z-index: -1;"></canvas>
         <div class="content">
             <h1>Connected Services</h1>
             <p>Data flowing seamlessly between nodes.</p>
