--- a/template3/index.html
+++ b/template3/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <!-- Background Animation with Date/Time Overlay -->
+    <canvas id="network-canvas" style="position: fixed; top: 0; left: 0; z-index: -1;"></canvas>
     <section id="datetime-network-section">
-        <canvas id="network-canvas"></canvas>
         <div class="datetime-container">
             <div class="clock">
                 <i class="fas fa-clock"></i>
@@ -26,6 +26,7 @@
             </div>
         </div>
     </section>
+    <!-- Add your sidebar, navbar, etc. here -->
 
     <!-- Link to external JavaScript file -->
     <script src="script.js"></script>
