--- a/template3/index.html
+++ b/template3/index.html
@@ -3,29 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connected Services Date and Time</title>
-    <!-- Google Fonts for modern typography -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <title>AWS Glowing Circuits Background</title>
     <!-- Link to external CSS file -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <canvas id="network-canvas" style="position: fixed; top: 0; left: 0; z-index: -1;"></canvas>
-    <section id="datetime-network-section">
-        <div class="datetime-container">
-            <div class="clock">
-                <i class="fas fa-clock"></i>
-                <span id="clock-time">07:53 AM PDT</span>
-            </div>
-            <div class="calendar">
-                <i class="fas fa-calendar-alt"></i>
-                <span id="calendar-date">Tuesday, May 13, 2025</span>
-            </div>
-        </div>
-    </section>
-    <!-- Add your sidebar, navbar, etc. here -->
+    <!-- Background Animation Section -->
+    <canvas id="network-canvas"></canvas>
+    <!-- Add your other content (e.g., sidebar, navbar) here -->
 
     <!-- Link to external JavaScript file -->
     <script src="script.js"></script>
