--- a/template3/index.html
+++ b/template3/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Background Animation Section -->
     <canvas id="network-canvas"></canvas>
-    <!-- Add your other content (e.g., sidebar, navbar) here -->
+    <!-- Add your other content (e.g., sidebar, navbar) heree -->
 
     <!-- Link to external JavaScript file -->
     <script src="script.js"></script>
