--- a/template3/index.html
+++ b/template3/index.html
@@ -3,20 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AWS Resources Visualization</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Connected Wires Background</title>
+    <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="aws-resources">
-        <div class="resource" id="ec2" style="top: 100px; left: 100px;">EC2</div>
-        <div class="resource" id="s3" style="top: 300px; left: 300px;">S3</div>
-        <div class="resource" id="lambda" style="top: 500px; left: 100px;">Lambda</div>
-        <div class="resource" id="dynamodb" style="top: 300px; left: 500px;">DynamoDB</div>
-        
-        <!-- SVG for connections -->
-        <svg id="connections" style="position: absolute; top: 0; left: 0; width: 100%; height: 100vh;"></svg>
-    </div>
+    <!-- Background Animation Section -->
+    <canvas id="network-canvas"></canvas>
+    <!-- Add your other content (e.g., sidebar, navbar) here -->
 
+    <!-- Link to external JavaScript file -->
     <script src="script.js"></script>
 </body>
 </html>
