--- a/template5/index.html
+++ b/template5/index.html
@@ -10,7 +10,12 @@
 <body>
     <!-- Background Animation Section -->
     <canvas id="vertical-wires-canvas"></canvas>
-    <!-- Add your other content (e.g., sidebar, navbar) here -->
+    <!-- Optional: Add your content here -->
+    <div class="content-overlay">
+        <!-- Example content: Replace with your sidebar, navbar, etc. -->
+        <h1>Welcome to My AWS Dashboard</h1>
+        <p>This background showcases AWS services connected by glowing wires.</p>
+    </div>
 
     <!-- SVG Icons for AWS Resources (hidden, used in JS) -->
     <svg style="display: none;">
