--- a/template6/index.html
+++ b/template6/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Animated Network Circuit</title>
+  <title>Live Data Flow Circuit</title>
   <style>
     html, body {
       margin: 0;
@@ -26,57 +26,92 @@
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
 
+    const nodeCount = 30;
     const nodes = [];
-    const cols = 10;
-    const rows = 6;
-    const spacing = 100;
-    const radius = 4;
+    const links = [];
+    const particles = [];
 
-    for (let i = 0; i < cols; i++) {
-      for (let j = 0; j < rows; j++) {
-        nodes.push({
-          x: spacing + i * spacing,
-          y: spacing + j * spacing,
-          pulse: 0
-        });
-      }
+    // Initialize nodes with random positions
+    for (let i = 0; i < nodeCount; i++) {
+      nodes.push({
+        x: Math.random() * canvas.width,
+        y: Math.random() * canvas.height
+      });
     }
 
-    function drawConnections() {
-      ctx.strokeStyle = 'rgba(0,255,204,0.3)';
-      ctx.lineWidth = 1;
-      for (let i = 0; i < nodes.length; i++) {
-        for (let j = i + 1; j < nodes.length; j++) {
-          const ni = nodes[i];
-          const nj = nodes[j];
-          const dx = ni.x - nj.x;
-          const dy = ni.y - nj.y;
-          if ((Math.abs(dx) === spacing && dy === 0) || (Math.abs(dy) === spacing && dx === 0)) {
-            ctx.beginPath();
-            ctx.moveTo(ni.x, ni.y);
-            ctx.lineTo(nj.x, nj.y);
-            ctx.stroke();
-          }
+    // Link nodes to their closest neighbors
+    for (let i = 0; i < nodes.length; i++) {
+      for (let j = i + 1; j < nodes.length; j++) {
+        const dx = nodes[i].x - nodes[j].x;
+        const dy = nodes[i].y - nodes[j].y;
+        const dist = Math.sqrt(dx * dx + dy * dy);
+        if (dist < 200) {
+          links.push({ a: i, b: j });
         }
       }
     }
 
-    function animate() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      drawConnections();
+    // Create data particles
+    for (let i = 0; i < 100; i++) {
+      const link = links[Math.floor(Math.random() * links.length)];
+      const startNode = nodes[link.a];
+      const endNode = nodes[link.b];
+      particles.push({
+        x: startNode.x,
+        y: startNode.y,
+        link: link,
+        t: 0,
+        color: `rgb(${Math.random()*255},${Math.random()*255},${Math.random()*255})`
+      });
+    }
 
-      nodes.forEach((node, index) => {
-        node.pulse = (node.pulse + 1) % 100;
+    function drawCircuit() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      // Draw links
+      ctx.strokeStyle = 'rgba(0,255,204,0.2)';
+      ctx.lineWidth = 1;
+      links.forEach(link => {
+        const a = nodes[link.a];
+        const b = nodes[link.b];
         ctx.beginPath();
-        ctx.arc(node.x, node.y, radius + Math.sin(node.pulse * 0.1), 0, Math.PI * 2);
+        ctx.moveTo(a.x, a.y);
+        ctx.lineTo(b.x, b.y);
+        ctx.stroke();
+      });
+
+      // Draw nodes
+      nodes.forEach(node => {
+        ctx.beginPath();
+        ctx.arc(node.x, node.y, 4, 0, Math.PI * 2);
         ctx.fillStyle = 'cyan';
         ctx.fill();
       });
 
-      requestAnimationFrame(animate);
+      // Move particles
+      particles.forEach(p => {
+        const a = nodes[p.link.a];
+        const b = nodes[p.link.b];
+        p.t += 0.01;
+        if (p.t > 1) {
+          p.t = 0;
+          const newLink = links[Math.floor(Math.random() * links.length)];
+          p.link = newLink;
+          p.color = `rgb(${Math.random()*255},${Math.random()*255},${Math.random()*255})`;
+        }
+        p.x = a.x + (b.x - a.x) * p.t;
+        p.y = a.y + (b.y - a.y) * p.t;
+
+        ctx.beginPath();
+        ctx.arc(p.x, p.y, 3, 0, Math.PI * 2);
+        ctx.fillStyle = p.color;
+        ctx.fill();
+      });
+
+      requestAnimationFrame(drawCircuit);
     }
 
-    animate();
+    drawCircuit();
   </script>
 </body>
 </html>
