--- a/template6/index.html
+++ b/template6/index.html
@@ -31,7 +31,7 @@
     const links = [];
     const particles = [];
 
-    // Initialize nodes with random positions
+    // Initialize nodes with random positionss
     for (let i = 0; i < nodeCount; i++) {
       nodes.push({
         x: Math.random() * canvas.width,
