--- a/template10/index.html
+++ b/template10/index.html
@@ -13,7 +13,7 @@
                 <div class="block-stroke"></div>
                 <div class="process-count">1</div>
                 <div class="process-icon">
-                    <img src="images/001.png" alt="Process Icon 1" class="process-icon-img">
+                    <img src="Project-Portfolio/images/001.png" alt="Process Icon 1" class="process-icon-img">
                 </div>
                 <div class="process-content">
                     <h4 class="process-title">Build and Develop AI Models to Recognize Patterns</h4>
@@ -28,7 +28,7 @@
                 <div class="block-stroke"></div>
                 <div class="process-count">2</div>
                 <div class="process-icon">
-                    <img src="images/002.png" alt="Process Icon 2" class="process-icon-img">
+                    <img src="Project-Portfolio/images/002.png" alt="Process Icon 2" class="process-icon-img">
                 </div>
                 <div class="process-content">
                     <h4 class="process-title">Train and Optimize Models</h4>
@@ -43,7 +43,7 @@
                 <div class="block-stroke"></div>
                 <div class="process-count">3</div>
                 <div class="process-icon">
-                    <img src="images/003.png" alt="Process Icon 3" class="process-icon-img">
+                    <img src="Project-Portfolio/images/003.png" alt="Process Icon 3" class="process-icon-img">
                 </div>
                 <div class="process-content">
                     <h4 class="process-title">Deploy and Monitor AI Systems</h4>
