--- a/template10/index.html
+++ b/template10/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Load Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Zen+Dots&display=swap" rel="stylesheet">
     <title>Process Feature</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -13,7 +17,7 @@
                 <div class="block-stroke"></div>
                 <div class="process-count">1</div>
                 <div class="process-icon">
-                    <img src="Project-Portfolio/images/001.png" alt="Process Icon 1" class="process-icon-img">
+                    <img src="images/001.png" alt="Process Icon 1" class="process-icon-img">
                 </div>
                 <div class="process-content">
                     <h4 class="process-title">Build and Develop AI Models to Recognize Patterns</h4>
@@ -28,7 +32,7 @@
                 <div class="block-stroke"></div>
                 <div class="process-count">2</div>
                 <div class="process-icon">
-                    <img src="Project-Portfolio/images/002.png" alt="Process Icon 2" class="process-icon-img">
+                    <img src="images/002.png" alt="Process Icon 2" class="process-icon-img">
                 </div>
                 <div class="process-content">
                     <h4 class="process-title">Train and Optimize Models</h4>
@@ -43,7 +47,7 @@
                 <div class="block-stroke"></div>
                 <div class="process-count">3</div>
                 <div class="process-icon">
-                    <img src="Project-Portfolio/images/003.png" alt="Process Icon 3" class="process-icon-img">
+                    <img src="images/003.png" alt="Process Icon 3" class="process-icon-img">
                 </div>
                 <div class="process-content">
                     <h4 class="process-title">Deploy and Monitor AI Systems</h4>
