--- a/template10/index.html
+++ b/template10/index.html
@@ -1,68 +1,22 @@
 <!DOCTYPE html>
-<html lang="en"> <!-- comment --> 
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Load Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Zen+Dots&display=swap" rel="stylesheet">
-    <title>Process Feature</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Advanced Circle Image Wrapper Effect - V5 (from Designer Preview)</title>
+    <link rel="stylesheet" href="circle_effect_v5.css">
 </head>
 <body>
-    <div class="process-container">
-        <div class="process-grid">
-            <div class="process-block">
-                <div class="block-stroke"></div>
-                <div class="process-count">1</div>
-                <div class="process-icon">
-                    <img src="images/001.png" alt="Process Icon 1" class="process-icon-img">
-                </div>
-                <div class="process-content">
-                    <h4 class="process-title">Build and Develop AI Models to Recognize Patterns</h4>
-                    <p class="process-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <a href="#" class="process-readmore">
-                        <div class="process-readmore-bg"></div>
-                        <span>→</span>
-                    </a>
-                </div>
-            </div>
-            <div class="process-block">
-                <div class="block-stroke"></div>
-                <div class="process-count">2</div>
-                <div class="process-icon">
-                    <img src="images/002.png" alt="Process Icon 2" class="process-icon-img">
-                </div>
-                <div class="process-content">
-                    <h4 class="process-title">Train and Optimize Models</h4>
-                    <p class="process-description">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <a href="#" class="process-readmore">
-                        <div class="process-readmore-bg"></div>
-                        <span>→</span>
-                    </a>
-                </div>
-            </div>
-            <div class="process-block">
-                <div class="block-stroke"></div>
-                <div class="process-count">3</div>
-                <div class="process-icon">
-                    <img src="images/003.png" alt="Process Icon 3" class="process-icon-img">
-                </div>
-                <div class="process-content">
-                    <h4 class="process-title">Deploy and Monitor AI Systems</h4>
-                    <p class="process-description">Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-                    <a href="#" class="process-readmore">
-                        <div class="process-readmore-bg"></div>
-                        <span>→</span>
-                    </a>
-                </div>
-            </div>
-        </div>
+    <div class="controls-v5">
+        <button id="playAnimationV5">Play Animation (V5)</button>
+        <p><em>V5: Attempting reconstruction based on Webflow Designer Preview source.</em></p>
     </div>
-
-    <!-- Include GSAP for animations -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-    <script src="script.js"></script>
+    <div class="animation-stage-v5">
+        <!-- Circles will be dynamically added by JavaScript -->
+        <!-- The structure will be based on classes like 'hero-visual_media-item' if found -->
+    </div>
+    <!-- Considering GSAP or similar if Web Animations API is insufficient for Webflow's complexity -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script> -->
+    <script src="circle_effect_v5.js"></script>
 </body>
 </html>
